--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>Hello, World!</h>
+<h1>Diving into the digital world</h>
+<br>
+<br>
+<h2>About Me!</h2>
+<p>I'm a passionate web developer with a knack for creating engaging online experiences. My love for scuba diving has inspired me to explore the digital world, and I've found a thriving community on Pinterest. With 300k monthly views, I've honed my skills in website design and development. Let's dive into the possibilities together!</p>
+<br>
+<h2>Here are the links to my socials!</h2>
+<img> </img>
+<img> </img>
+<br>
+<h3>My documentary</h3>
+<p>Join me on a thrilling underwater adventure exploring the depths of the ocean and uncovering the profound connection between scuba diving and marine conservation. Here is a documentary I created about the unique perspective that scuba diving offers, allowing us to witness firsthand the delicate balance of marine ecosystems and the urgent need for preservation</p>
+<a>Diving for Change: the Power of Scuba Diving in Marine Conservation</a>
